# software-engineering-for-data-science-2024-introduction-to-python-python_guide

./: README.md  mkdocs.yml  pyproject.toml  test_sort.py
docs/: api.md  index.md
insertion_sort/: pyvenv.cfg
src/insertion_sort/: sort.py
test/: test_sort.py
